# platform-demo-fastapi-gitlab-k8s

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
helm/platform-demo/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/platform-demo/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/: kind-config.yaml  namespace.yaml
tests/: test_health.py
