[project]
name = "platform-demo"
version = "0.1.0"
description = "FastAPI platform demo with Kubernetes and CI"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "httpx==0.27.2",
  "ruff==0.6.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"